--- a/Q2_answer.tex
+++ b/Q2_answer.tex
@@ -7,7 +7,7 @@ Building on the sensor device designed in Question 1, we now develop a monitorin
 
 The system uses a practical three-tier architecture that efficiently handles data from sensor devices. We want all the nodes to be independent and be able to just send data. So we want to have gateways placed strategically in the parks accounting for things like trees, buildings, and other obstacles that might block the signal. Each gateway will be connected to a LoRaWAN network server, which will then forward the data to central servers for storage and analysis. 
 
-I am not sure what the best option would be for sending data from gateways to the central servers, but I will assume that we can use a cellular network, satellite uplink, or fixed wireless connection depending on the local infrastructure. I have been able to see on maps that each park has a few buildings around the parks that might be suitable for placing the gateways. Given the size of Knuthenborg we might only need 3-5 gateways, but given the bigger size of Mpala we might need more.
+I am not sure what the best option would be for sending data from gateways to the central servers, but I will assume that we can use a cellular network, satellite uplink, or fixed wireless connection depending on the local infrastructure. I have been able to see on maps that each park has a few buildings around the parks that might be suitable for placing the gateways. Given the size of Knuthenborg we might only need 3-5 gateways, but given the bigger size of Mpala we probably need more.
 
 The idea of the central servers is to have a place to process and store the data collected from the sensor devices. With the servers having processed the data it will also be easier to create user applications that can visualize the data and provide insights for researchers and park managers. Data flowing in from the sensor devices will be stored in a time-series database, which is well-suited for handling the hourly data from multiple devices. The results from analytics on the servers will be stored in a separate relational database. The system architecture is illustrated in Figure\ref{fig:system_architecture}.   
 
